# dnn_and_starpu

./: load_module.sh  load_module.sh~  paje.trace
linear_prog/: minimize_latency.py
pytorch_dnn/FashionMNIST_DNN/: inferenceDNN.py  learningDNN.py  readme
starpu_cudnn/: CMakeLists.txt  Makefile  cudnn_test  load_module.sh
starpu_cudnn/data/model/: 0  1  2  3  4  5
starpu_cudnn/include/mnist-fashion/: mnist_reader.hpp  mnist_reader_common.hpp
starpu_cudnn/include/starpu_dnn/: model_load.hpp  starpu_dnn.hpp
starpu_cudnn/morse_cmake/modules/: FindCUDNN.cmake
starpu_cudnn/src/: #main.cpp#  .#main.cpp  dnn.cu  main.cpp  starpu_dnn.cpp  starpu_dnn.cpp~  starpu_dnn.hpp
test/starpu_cuda_cudnn/: kernels_cudnn.cu  main_cudnn.c
